[package]
name = "homography-estimator"
version = "0.1.0"
edition = "2021"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
description = "DLT algorithm for homography matrix estimation"
keywords = ["photogrammetry"]
categories = ["algorithms", "computer-vision", "no-std", "science", "science::robotics"]
license = "MIT"

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
cv-optimize = { version = "0.1.0", path = "../cv-optimize" }
float-ord = "0.3.2"
derive_more = "0.99.17"
num-traits = { version = "0.2.14", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }

[dev-dependencies]
nalgebra = { version = "0.30.1", features = ["rand"] }
